--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -502,7 +502,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home7</span>
+            <span>Home8</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -730,6 +730,11 @@ const visibleTasks = tasks.filter(task => {
             taskDiv.className = "task-item";
             taskDiv.dataset.taskTitle = task.title;
             taskDiv.dataset.taskDate = task.date;
+
+            if (!Array.isArray(task.users) || task.users.length === 0) {
+    task.users = ["Unknown"];
+}
+
 
             let taskHTML = '';
             const required = task.repeat === "Daily" ? task.timesPerDay || 1 :
@@ -1266,9 +1271,6 @@ async function finishTask(userName, task, button, selectedDate) {
                 const now = new Date();
                 if (date.toDateString() === now.toDateString()) {
                     btn.classList.add("selected");
-                    if (!document.querySelector(".day.selected")) {
-                        loadTasksForDate(btn.dataset.date);
-                    }
                 }
         
                 container.appendChild(btn);
