--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -401,8 +401,8 @@ body.menu-open {
                 <button id="closeMenu" class="close-btn" aria-label="Close Menu">×</button>
             </div>
             <ul class="menu-items">
-                <li><a href="#" id="taskSettingsLink" class="menu-link">Task Settings</a></li>
-                <li><a href="#" id="marketDashLink" class="menu-link">Market Dash</a></li>
+                <li><a href="#" id="taskSettingsLink" class="menu-link">Create a Task</a></li>
+                <li><a href="#" id="marketDashLink" class="menu-link">Create a Reward</a></li>
                 <li><a href="#" id="userManagementLink" class="menu-link">User Management</a></li>
                 <li><a href="#" id="logoutLink" class="menu-link">Logout</a></li>
             </ul>
