--- a/mobile/4-Market/market.html
+++ b/mobile/4-Market/market.html
@@ -282,20 +282,16 @@
 
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
-            <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home</span>
+            <img src="/BeeMazing-Y1/mobile/1-Home/SettingsBtn.png" alt="Home" />
+            <span>User Settings</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-            <span>Task Settings</span>
+            <span>Create Task</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/4-Market/market.html" class="footer-icon" aria-label="Market">
             <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-            <span>Market Dash</span>
-        </a>
-        <a href="/BeeMazing-Y1/mobile/5-Stats/stats.html" class="footer-icon" aria-label="Stats">
-            <img src="/BeeMazing-Y1/mobile/1-Home/StatsBtn.png" alt="Stats" />
-            <span>Stats</span>
+            <span>Create Reward</span>
         </a>
     </div>
 
