--- a/mobile/4-Market/luckychest.html
+++ b/mobile/4-Market/luckychest.html
@@ -414,20 +414,16 @@
 
   <div class="footer">
     <a href="/BeeMazing-Y1/mobile/1-Home/home.html" id="homeLink" class="footer-icon" aria-label="Home">
-      <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-      <span>Home</span>
+      <img src="/BeeMazing-Y1/mobile/1-Home/SettingsBtn.png" alt="Home" />
+      <span>User Settings</span>
     </a>
     <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" id="tasksLink" class="footer-icon" aria-label="Tasks">
       <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-      <span>Tasks</span>
+      <span>Create Task</span>
     </a>
     <a href="/BeeMazing-Y1/mobile/4-Market/market.html" id="marketLink" class="footer-icon" aria-label="Market">
       <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-      <span>Market</span>
-    </a>
-    <a href="/BeeMazing-Y1/mobile/5-Stats/stats.html" id="statsLink" class="footer-icon" aria-label="Stats">
-      <img src="/BeeMazing-Y1/mobile/1-Home/StatsBtn.png" alt="Stats" />
-      <span>Stats</span>
+      <span>Create Reward</span>
     </a>
   </div>
 
