--- a/mobile/4-Market/luckychest.html
+++ b/mobile/4-Market/luckychest.html
@@ -423,7 +423,7 @@
     </a>
     <a href="/BeeMazing-Y1/mobile/4-Market/market.html" id="marketLink" class="footer-icon" aria-label="Market">
       <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-      <span>Market</span>
+      <span>Create Reward</span>
     </a>
     <a href="/BeeMazing-Y1/mobile/5-Stats/stats.html" id="statsLink" class="footer-icon" aria-label="Stats">
       <img src="/BeeMazing-Y1/mobile/1-Home/StatsBtn.png" alt="Stats" />
