--- a/mobile/4-Market/luckychest.html
+++ b/mobile/4-Market/luckychest.html
@@ -326,7 +326,7 @@
   </style>
 </head>
 <body>
-  <div class="header">Lucky Chest Mindblow</div>
+  <div class="header">Treasure Land</div>
   <div class="container" id="chestContainer"></div>
 
 
