--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -349,7 +349,7 @@
       </a>
       <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
           <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
-          <span>Profile1</span>
+          <span>Profile2</span>
       </a>
       <a href="#" id="marketButton" class="footer-icon active" aria-label="Market">
           <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
@@ -463,6 +463,11 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
+
+
+
+
+
       async function loadRewards(userName) {
     const rewardsGrid = document.getElementById("rewards-grid");
     const historyGrid = document.getElementById("history-grid");
@@ -470,23 +475,19 @@ document.querySelectorAll('.footer a').forEach(link => {
     historyGrid.innerHTML = "<p class='text-center'>Loading history...</p>";
 
     try {
-        // Fetch user honey balance
         const userHoney = await getUserHoney(userName);
         document.getElementById('honeyBalance').textContent = userHoney;
 
-        // Fetch all available market rewards
         const marketResponse = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
         const marketData = await marketResponse.json();
         if (!marketResponse.ok) throw new Error(marketData.error || "Failed to fetch market rewards");
         const marketRewards = marketData.rewards || [];
 
-        // Fetch user rewards
         const userRewardsResponse = await fetch(`https://beemazing.onrender.com/api/user-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
         const userRewardsData = await userRewardsResponse.json();
         if (!userRewardsResponse.ok) throw new Error(userRewardsData.error || "Failed to fetch user rewards");
         const userRewards = (userRewardsData.userRewards || {})[userName] || [];
 
-        // Create a map of market rewards for cost and type lookup
         const marketRewardMap = {};
         marketRewards.forEach(reward => {
             marketRewardMap[reward.name] = {
@@ -497,28 +498,23 @@ document.querySelectorAll('.footer a').forEach(link => {
             };
         });
 
-        // Group user rewards by name and count occurrences
         const rewardCounts = {};
         userRewards.forEach(reward => {
             rewardCounts[reward.name] = (rewardCounts[reward.name] || 0) + 1;
         });
 
+        const filteredRewards = marketRewards.filter(reward => {
+            if (!reward.assignedUsers || reward.assignedUsers.length === 0) {
+                return true;
+            }
+            return reward.assignedUsers.includes(userName);
+        });
 
-// Only include rewards assigned to "Everyone" or to this specific user
-const filteredRewards = marketRewards.filter(reward => {
-  if (!reward.assignedUsers || reward.assignedUsers.length === 0) {
-    return true; // Everyone
-  }
-  return reward.assignedUsers.includes(userName);
-});
+        const allRewardNames = [...new Set([
+            ...filteredRewards.map(r => r.name),
+            ...Object.keys(rewardCounts)
+        ])];
 
-const allRewardNames = [...new Set([
-  ...filteredRewards.map(r => r.name),
-  ...Object.keys(rewardCounts)
-])];
-
-
-        // Render all rewards
         rewardsGrid.innerHTML = "";
         if (allRewardNames.length === 0) {
             rewardsGrid.innerHTML = "<p class='text-center'>No rewards available in the hive.</p>";
@@ -542,31 +538,38 @@ const allRewardNames = [...new Set([
                 card.dataset.index = index;
 
                 let backContent = '';
+
+                // 💡 NEW: Encode outcomes properly
+                const safeEncodedOutcomes = encodeURIComponent(btoa(JSON.stringify(outcomes)));
+
                 if (userRewardCount > 0) {
                     if (isFromUserRewardsOnly && (isTheKey || isDiceChest)) {
-                        // For chest rewards with "Use it", show quantity circle and button
+                        // Show quantity and Use It
                         backContent = `
                             <div class="quantity-circle">${userRewardCount}</div>
                             <button class="mt-2 px-3 py-1 btn-back rounded font-semibold" 
-onclick="${isTheKey ? `useTheKey('${userName}', '${rewardName}', 1)` : 
-          `useDiceChest('${userName}', '${rewardName}', encodeURIComponent('${btoa(JSON.stringify(outcomes))}'), 1)`}"
-
+                                onclick="${isTheKey ? 
+                                    `useTheKey('${userName}', '${rewardName}', 1)` : 
+                                    `useDiceChest('${userName}', '${rewardName}', '${safeEncodedOutcomes}', 1)`}">
                                 Use it
                             </button>
                         `;
                     } else {
-                        // For other owned rewards, show dropdown
+                        // Normal rewards
                         const options = Array.from({ length: userRewardCount }, (_, i) => i + 1)
                             .map(n => `<option value="${n}">${n}</option>`).join('');
                         backContent = `
                             <select id="quantity-${rewardName.replace(/\s+/g, '-')}" class="mt-2">
                                 ${options}
                             </select>
-                            <button class="mt-2 px-3 py-1 btn-back rounded font-semibold" 
-                                    onclick="${isHoney ? `redeemHoneyReward('${userName}', '${rewardName}', document.getElementById('quantity-${rewardName.replace(/\s+/g, '-')}').value)` : 
-                                              isTheKey ? `useTheKey('${userName}', '${rewardName}', document.getElementById('quantity-${rewardName.replace(/\s+/g, '-')}').value)` : 
-                                              isDiceChest ? `useDiceChest('${userName}', '${rewardName}', '${JSON.stringify(outcomes)}', document.getElementById('quantity-${rewardName.replace(/\s+/g, '-')}').value)` : 
-                                              `redeemReward('${userName}', '${rewardName}', document.getElementById('quantity-${rewardName.replace(/\s+/g, '-')}').value)`}">
+                            <button class="mt-2 px-3 py-1 btn-back rounded font-semibold"
+                                onclick="${isHoney ? 
+                                    `redeemHoneyReward('${userName}', '${rewardName}', document.getElementById('quantity-${rewardName.replace(/\s+/g, '-')}').value)` :
+                                    isTheKey ? 
+                                    `useTheKey('${userName}', '${rewardName}', document.getElementById('quantity-${rewardName.replace(/\s+/g, '-')}').value)` :
+                                    isDiceChest ?
+                                    `useDiceChest('${userName}', '${rewardName}', '${safeEncodedOutcomes}', document.getElementById('quantity-${rewardName.replace(/\s+/g, '-')}').value)` :
+                                    `redeemReward('${userName}', '${rewardName}', document.getElementById('quantity-${rewardName.replace(/\s+/g, '-')}').value)`}">
                                 ${isHoney ? 'Get it' : isTheKey || isDiceChest ? 'Use it' : 'Receive'}
                             </button>
                         `;
@@ -582,8 +585,8 @@ onclick="${isTheKey ? `useTheKey('${userName}', '${rewardName}', 1)` :
                             <h3 class="text-lg font-semibold">${rewardName}</h3>
                             <p class="text-[var(--text-color)]">Honey: ${rewardCost} 🍯</p>
                             <button class="mt-2 px-3 py-1 rounded font-semibold ${canAfford ? 'btn-primary' : 'btn-disabled'}" 
-                                    ${canAfford ? '' : 'disabled'} 
-                                    onclick="claimReward('${userName}', '${rewardName}', '${rewardType}', ${rewardCost}, '${JSON.stringify(outcomes)}')">Get It</button>
+                                ${canAfford ? '' : 'disabled'} 
+                                onclick="claimReward('${userName}', '${rewardName}', '${rewardType}', ${rewardCost}, '${JSON.stringify(outcomes)}')">Get It</button>
                         </div>
                         <div class="reward-card-back text-center">
                             <h3 class="text-lg font-semibold">${rewardName}</h3>
@@ -592,13 +595,13 @@ onclick="${isTheKey ? `useTheKey('${userName}', '${rewardName}', 1)` :
                         </div>
                     </div>
                 `;
+
                 rewardsGrid.appendChild(card);
 
                 const indicator = card.querySelector('.purchase-indicator');
                 indicator.style.display = userRewardCount > 0 ? 'flex' : 'none';
                 indicator.textContent = userRewardCount;
 
-                // Add flip event listener only for non-user-rewards-only cards
                 if (!isFromUserRewardsOnly) {
                     card.addEventListener('click', (e) => {
                         if (!e.target.closest('button') && !e.target.closest('select')) {
@@ -609,13 +612,12 @@ onclick="${isTheKey ? `useTheKey('${userName}', '${rewardName}', 1)` :
             });
         }
 
-        // Fetch reward history
+        // Load reward history (unchanged from your version)
         const historyResponse = await fetch(`https://beemazing.onrender.com/api/reward-history?adminEmail=${encodeURIComponent(adminEmail)}`);
         const historyData = await historyResponse.json();
         if (!historyResponse.ok) throw new Error(historyData.error || "Failed to fetch reward history");
         const rewardHistory = (historyData.rewardHistory || {})[userName] || [];
 
-        // Render reward history
         historyGrid.innerHTML = "";
         if (rewardHistory.length === 0) {
             historyGrid.innerHTML = "<p class='text-center'>No rewards received yet.</p>";
@@ -650,7 +652,6 @@ onclick="${isTheKey ? `useTheKey('${userName}', '${rewardName}', 1)` :
                     startX = e.touches[0].clientX;
                     isSwiping = true;
                 });
-
                 card.addEventListener("touchmove", (e) => {
                     if (!isSwiping) return;
                     currentX = e.touches[0].clientX;
@@ -658,14 +659,11 @@ onclick="${isTheKey ? `useTheKey('${userName}', '${rewardName}', 1)` :
                     if (diffX > 50) card.classList.add("swiped");
                     else if (diffX < -50) card.classList.remove("swiped");
                 });
-
                 card.addEventListener("touchend", () => isSwiping = false);
-
                 card.addEventListener("mousedown", (e) => {
                     startX = e.clientX;
                     isSwiping = true;
                 });
-
                 card.addEventListener("mousemove", (e) => {
                     if (!isSwiping) return;
                     currentX = e.clientX;
@@ -673,7 +671,6 @@ onclick="${isTheKey ? `useTheKey('${userName}', '${rewardName}', 1)` :
                     if (diffX > 50) card.classList.add("swiped");
                     else if (diffX < -50) card.classList.remove("swiped");
                 });
-
                 card.addEventListener("mouseup", () => isSwiping = false);
 
                 card.querySelector('.reward-card-inner').addEventListener('click', (e) => {
@@ -691,6 +688,19 @@ onclick="${isTheKey ? `useTheKey('${userName}', '${rewardName}', 1)` :
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+      
 
 
 
