Fix roll the dice #5

--- a/mobile/4-Market/rollthedice.html
+++ b/mobile/4-Market/rollthedice.html
@@ -5,14 +5,15 @@
   <title>Roll the Dice</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #1E1F26;
-      color: #fff;
-      margin: 0;
-      padding: 30px;
-      text-align: center;
-    }
+body {
+  font-family: 'Poppins', sans-serif;
+  background: #1E1F26;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
     h1 {
       color: #FFC107;
       margin-bottom: 20px;
