--- a/mobile/4-Market/rollthedice.html
+++ b/mobile/4-Market/rollthedice.html
@@ -5,15 +5,14 @@
   <title>Roll the Dice</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-body {
-  font-family: 'Poppins', sans-serif;
-  background: #1E1F26;
-  color: #fff;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
-
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #1E1F26;
+      color: #fff;
+      margin: 0;
+      padding: 30px;
+      text-align: center;
+    }
     h1 {
       color: #FFC107;
       margin-bottom: 20px;
@@ -128,13 +127,13 @@ body {
   <ul class="reward-list" id="rewardLegend"></ul>
   
   <!-- Footer with Test Your Luck Later button -->
-  <div style="position:fixed; bottom:0; width:100%; background:#212121; padding:12px; display:flex; justify-content:center;">
+  <div style="position:fixed; bottom:0; width:calc(100% - 60px); margin:0 30px; background:#212121; padding:12px; display:flex; justify-content:center;">
     <button onclick="testLuckLater()" style="background:#2A2B32; color:#FFC107; font-size:16px; padding:10px 20px; border:none; border-radius:8px; font-weight:bold; cursor:pointer;">
       Test Your Luck Later
     </button>
   </div>
   
-
+  
   <script>
     let user = "";
     let adminEmail = "";
