--- a/mobile/4-Market/rollthedice.html
+++ b/mobile/4-Market/rollthedice.html
@@ -127,11 +127,14 @@
   <ul class="reward-list" id="rewardLegend"></ul>
   
   <!-- Footer with Test Your Luck Later button -->
-  <div style="position:fixed; bottom:0; width:calc(100% - 60px); margin:0 30px; padding:12px; display:flex; justify-content:center;">
-    <button onclick="testLuckLater()" style="width:calc(100% - 60px); margin:0 30px; background:#2A2B32; color:#FFC107; font-size:16px; padding:10px 20px; border:none; border-radius:8px; font-weight:bold; cursor:pointer;">
-      Test Your Luck Later
-    </button>
+  <div style="position:fixed; bottom:0; width:calc(100% - 60px); margin:0 30px; padding:12px; display:flex; justify-content:center; align-items:center;">
+    <div style="text-align:center;">
+      <button onclick="testLuckLater()" style="background:#2A2B32; color:#FFC107; font-size:16px; padding:10px 20px; border:none; border-radius:8px; font-weight:bold; cursor:pointer;">
+        Test Your Luck Later
+      </button>
+    </div>
   </div>
+  
   
   
   <script>
