--- a/mobile/4-Market/rollthedice.html
+++ b/mobile/4-Market/rollthedice.html
@@ -104,7 +104,7 @@
 </head>
 <body>
 
-  <h1>🎲 Roll the Dice2</h1>
+  <h1>🎲 Roll the Dice</h1>
 
   <div class="dice" id="dice">
     <div class="dot" id="d1"></div>
