--- a/mobile/4-Market/rollthedice.html
+++ b/mobile/4-Market/rollthedice.html
@@ -104,7 +104,7 @@
 </head>
 <body>
 
-  <h1>🎲 Roll the Dice 1</h1>
+  <h1>🎲 Roll the Dice 7</h1>
 
   <div class="dice" id="dice">
     <div class="dot" id="d1"></div>
@@ -127,7 +127,7 @@
   <ul class="reward-list" id="rewardLegend"></ul>
   
   <!-- Footer with Test Your Luck Later button -->
-  <div style="position:fixed; bottom:20px; left:50%; transform:translateX(-50%); background:#212121; padding:12px 30px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.5); display:flex; justify-content:center; align-items:center;">
+  <div style="position:fixed; bottom:0; width:100%; background:#212121; padding:12px 0; display:flex; justify-content:center; align-items:center; box-sizing:border-box;">
     <button onclick="testLuckLater()" style="background:#2A2B32; color:#FFC107; font-size:16px; padding:10px 20px; border:none; border-radius:8px; font-weight:bold; cursor:pointer;">
       Test Your Luck Later
     </button>
